# netbox-oauth-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPENDABOT_REVIEW.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docker/keycloak/: realm-infra.json
docker/netbox/: plugins.py
integration_tests/: conftest.py  pytest.ini  requirements.txt  test_e2e.py
netbox_keycloak_jwt_auth/: __init__.py  authentication.py  jwks.py  mapping.py  models.py  settings.py
netbox_keycloak_jwt_auth/migrations/: 0001_initial.py
netbox_oauth_api/: __init__.py  authentication.py  jwks.py  mapping.py  models.py  settings.py
netbox_oauth_api/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_app.py  test_integration.py  test_mapping.py  test_validation.py
