[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-keycloak-jwt-auth"
version = "0.1.0"
description = "Keycloak JWT (Bearer) authentication for the NetBox REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "andreeyka" },
]
keywords = ["netbox", "netbox-plugin", "keycloak", "jwt", "oidc", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/andreeyka/netbox-oauth-api"

[project.optional-dependencies]
test = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["netbox_keycloak_jwt_auth*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov=netbox_keycloak_jwt_auth --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["netbox_keycloak_jwt_auth"]
omit = ["netbox_keycloak_jwt_auth/migrations/*"]
