[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-keycloak-jwt-auth"
version = "0.1.0"
description = "Keycloak JWT (Bearer) authentication for the NetBox REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "andreeyka" },
]
keywords = ["netbox", "netbox-plugin", "keycloak", "jwt", "oidc", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/andreeyka/netbox-oauth-api"
Changelog = "https://github.com/andreeyka/netbox-oauth-api/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Django majors shipped by supported NetBox releases: 5.0 → NetBox 4.0/4.1,
# 5.1 → 4.2, 5.2 → 4.3/4.4/4.5, 6.0 → 4.6 — CI pins each of them explicitly
# on top of this range.
test = [
    "Django>=5.0,<6.1",
    "djangorestframework>=3.15",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]
dev = [
    "netbox-keycloak-jwt-auth[test]",
    "ruff>=0.8",
    "build>=1.2",
    "twine>=5.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["netbox_keycloak_jwt_auth*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
# Make `tests.settings` importable when running plain `pytest` (script entry
# points do not put the current directory on sys.path).
pythonpath = ["."]
addopts = "--cov=netbox_keycloak_jwt_auth --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["netbox_keycloak_jwt_auth"]
omit = ["netbox_keycloak_jwt_auth/migrations/*"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["netbox_keycloak_jwt_auth/migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
]
